k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-backend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: python-backend
