k8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-backend-ingress
  annotations:
    kubernetes.io/ingress.class: alb  # Use AWS ALB Ingress Controller
spec:
  rules:
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-backend
            port:
              number: 80
